create base html structure and buttons with classes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <script src="script-calc.js"></script>
 </head>
 <body>
+
+    <div class="case">
+        <div class="face">
+            <div class="screen">
+                <div class="interface">
+                    <div class="buttons-container">
+                        <button class="operators">CE</button>
+                        <button class="operators" id="divide">HTML ENTITY. &divide;</button>
+                        <button class="operators" id="multiply">X</button>
+                        <button class="blank"></button>
+
+                        <button>7</button>
+                        <button>8</button>
+                        <button>9</button>
+                        <button class="operators" id="clear">C</button>
+
+                        <button>4</button>
+                        <button>5</button>
+                        <button>6</button>
+                        <button class="operators" id="subtract">-</button>
+
+                        <button>1</button>
+                        <button>2</button>
+                        <button>3</button>
+                        <button class="operators" id="add">+</button>
+
+                        <button class="rec-btn">0</button>
+                        <button id="."></button>
+                        <button class="operators" id="equals">=</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
     
 </body>
 </html>
