--- a/index.html
+++ b/index.html
@@ -11,33 +11,37 @@
 
     <div class="case">
         <div class="face">
-            <div class="screen">
-                <div class="interface">
-                    <div class="buttons-container">
-                        <button class="operators">CE</button>
-                        <button class="operators" id="divide">HTML ENTITY. &divide;</button>
-                        <button class="operators" id="multiply">X</button>
-                        <button class="blank"></button>
+            <div class="screen">80085</div>
+            <div class="interface">
+                <div class="recessed-bezel"></div>
+                <div class="bezel">
+                    <div class="logo">LOGO</div>
+                    <div class="model">Odinmath</div>
+                </div>
+                <div class="buttons-container">
+                    <button class="operators">CE</button>
+                    <button class="operators" id="divide">&divide;</button>
+                    <button class="operators" id="multiply">X</button>
+                    <div class="blank"></div>
 
-                        <button>7</button>
-                        <button>8</button>
-                        <button>9</button>
-                        <button class="operators" id="clear">C</button>
+                    <button>7</button>
+                    <button>8</button>
+                    <button>9</button>
+                    <button class="operators" id="clear">C</button>
 
-                        <button>4</button>
-                        <button>5</button>
-                        <button>6</button>
-                        <button class="operators" id="subtract">-</button>
+                    <button>4</button>
+                    <button>5</button>
+                    <button>6</button>
+                    <button class="operators" id="subtract">-</button>
 
-                        <button>1</button>
-                        <button>2</button>
-                        <button>3</button>
-                        <button class="operators" id="add">+</button>
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                    <button class="operators" id="add">+</button>
 
-                        <button class="rec-btn">0</button>
-                        <button id="."></button>
-                        <button class="operators" id="equals">=</button>
-                    </div>
+                    <button class="rec-btn">0</button>
+                    <button id="decimal">.</button>
+                    <button class="rec-btn" id="equals">=</button>
                 </div>
             </div>
 
