change 'populateDisplay' logic to a 'switch statement'

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="blank"></div>
 
                     <button>7</button>
-                    <button>8</button>
+                    <button id="eight">8</button>
                     <button id="nine">9</button>
                     <button class="operators" id="clear">C</button>
 
