finish adding event listeners to num keys

--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
                     <button class="operators" id="multiply">X</button>
                     <div class="blank"></div>
 
-                    <button>7</button>
+                    <button id="seven">7</button>
                     <button id="eight">8</button>
                     <button id="nine">9</button>
                     <button class="operators" id="clear">C</button>
 
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
+                    <button id="four">4</button>
+                    <button id="five">5</button>
+                    <button id="six">6</button>
                     <button class="operators" id="subtract">-</button>
 
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
+                    <button id="one">1</button>
+                    <button id="two">2</button>
+                    <button id="three">3</button>
                     <button class="operators" id="add">+</button>
 
-                    <button class="rec-btn">0</button>
+                    <button class="rec-btn" id="zero">0</button>
                     <button id="decimal">.</button>
                     <button class="rec-btn" id="equals">=</button>
                 </div>
