--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
                     <button class="operators" id="multiply">X</button>
                     <div class="blank"></div>
 
-                    <button id="seven">7</button>
-                    <button id="eight">8</button>
-                    <button id="nine">9</button>
+                    <button class="numbers" id="seven">7</button>
+                    <button class="numbers" id="eight">8</button>
+                    <button class="numbers" id="nine">9</button>
                     <button class="operators" id="clear">C</button>
 
-                    <button id="four">4</button>
-                    <button id="five">5</button>
-                    <button id="six">6</button>
+                    <button class="numbers" id="four">4</button>
+                    <button class="numbers" id="five">5</button>
+                    <button class="numbers" id="six">6</button>
                     <button class="operators" id="subtract">-</button>
 
-                    <button id="one">1</button>
-                    <button id="two">2</button>
-                    <button id="three">3</button>
+                    <button class="numbers" id="one">1</button>
+                    <button class="numbers" id="two">2</button>
+                    <button class="numbers" id="three">3</button>
                     <button class="operators" id="add">+</button>
 
-                    <button class="rec-btn" id="zero">0</button>
-                    <button id="decimal">.</button>
+                    <button class="rec-btn numbers" id="zero">0</button>
+                    <button class="numbers" id="decimal">.</button>
                     <button class="rec-btn" id="equals">=</button>
                 </div>
             </div>
