--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
                     <div class="model">Odinmath</div>
                 </div>
                 <div class="buttons-container">
-                    <button class="operators" id="ce">CE</button>
-                    <button class="operators" id="divide">&divide;</button>
-                    <button class="operators" id="multiply">X</button>
+                    <button class="beige-btn" id="ce">CE</button>
+                    <button class="operators beige-btn" id="divide">&divide;</button>
+                    <button class="operators beige-btn" id="multiply">X</button>
                     <div class="blank"></div>
 
                     <button class="numbers" id="seven">7</button>
                     <button class="numbers" id="eight">8</button>
                     <button class="numbers" id="nine">9</button>
-                    <button class="operators" id="clear">C</button>
+                    <button class="beige-btn" id="clear">C</button>
 
                     <button class="numbers" id="four">4</button>
                     <button class="numbers" id="five">5</button>
                     <button class="numbers" id="six">6</button>
-                    <button class="operators" id="subtract">-</button>
+                    <button class="operators beige-btn" id="subtract">-</button>
 
                     <button class="numbers" id="one">1</button>
                     <button class="numbers" id="two">2</button>
                     <button class="numbers" id="three">3</button>
-                    <button class="operators" id="add">+</button>
+                    <button class="operators beige-btn" id="add">+</button>
 
                     <button class="rec-btn numbers" id="zero">0</button>
                     <button class="numbers" id="decimal">.</button>
-                    <button class="rec-btn" id="equals">=</button>
+                    <button class="operators rec-btn" id="equals">=</button>
                 </div>
             </div>
 
