--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
 
+    <div class="bg">
+        <div class="content">
+            <div class="calc-container">
+
+            </div>
+        </div>
+    </div>
+
     <div class="case">
         <div class="face">
             <div class="screen" id="screen">0</div>
